# datafusion-postgres

./: .gitignore  Cargo.toml  README.md  export_pg_catalog_arrow.sh  flake.nix  pg_to_arrow.py
.github/workflows/: ci.yml
arrow-pg/: Cargo.toml
arrow-pg/examples/: duckdb.rs
arrow-pg/src/: datatypes.rs  encoder.rs  lib.rs  list_encoder.rs  row_encoder.rs  struct_encoder.rs
arrow-pg/src/datatypes/: df.rs
datafusion-pg-catalog/: Cargo.toml  export_pg_catalog_arrow.sh
datafusion-pg-catalog/pg_catalog_arrow_exports/: pg_amop.feather  pg_attrdef.feather  pg_attribute.feather  pg_auth_members.feather  pg_authid.feather  pg_cast.feather  pg_class.feather  pg_constraint.feather  pg_conversion.feather  pg_database.feather  pg_db_role_setting.feather  pg_default_acl.feather  pg_depend.feather  pg_description.feather  pg_enum.feather  pg_event_trigger.feather  pg_extension.feather  pg_foreign_data_wrapper.feather  pg_foreign_server.feather  pg_foreign_table.feather  pg_index.feather  pg_inherits.feather  pg_init_privs.feather  pg_largeobject.feather  pg_largeobject_metadata.feather  pg_namespace.feather  pg_opfamily.feather  pg_parameter_acl.feather  pg_partitioned_table.feather  pg_policy.feather  pg_proc.feather  pg_publication.feather  pg_publication_namespace.feather  pg_publication_rel.feather  pg_replication_origin.feather  pg_rewrite.feather  pg_seclabel.feather  pg_sequence.feather  pg_shdepend.feather  pg_shdescription.feather  (+12 more)
datafusion-pg-catalog/src/: lib.rs  pg_catalog.rs
datafusion-pg-catalog/src/pg_catalog/: context.rs  has_privilege_udf.rs  pg_class.rs  pg_database.rs  pg_get_expr_udf.rs  pg_namespace.rs  pg_roles.rs  pg_tables.rs  pg_views.rs
datafusion-pg-catalog/src/sql/: parser.rs  rules.rs
datafusion-postgres/: Cargo.toml  export_pg_catalog_arrow.sh
datafusion-postgres-cli/: Cargo.toml
datafusion-postgres-cli/src/: main.rs
datafusion-postgres/pg_catalog_arrow_exports/: pg_aggregate.feather  pg_am.feather  pg_amop.feather  pg_amproc.feather  pg_authid.feather  pg_cast.feather  pg_collation.feather  pg_extension.feather  pg_get_keywords.feather  pg_language.feather  pg_largeobject_metadata.feather  pg_opclass.feather  pg_operator.feather  pg_opfamily.feather  pg_publication_namespace.feather  pg_range.feather  pg_sequence.feather  pg_shdepend.feather  pg_statistic_ext.feather  pg_ts_config.feather  pg_ts_config_map.feather  pg_ts_dict.feather  pg_ts_parser.feather  pg_ts_template.feather  pg_type.feather
datafusion-postgres/src/: auth.rs  client.rs  handlers.rs  lib.rs  pg_catalog.rs  sql.rs  testing.rs
datafusion-postgres/src/hooks/: close.rs  discard.rs  listen_unlisten.rs  mod.rs  reset.rs  set_show.rs
datafusion-postgres/src/pg_catalog/: catalog_info.rs  context.rs  empty_table.rs  format_type.rs  has_privilege_udf.rs  pg_attribute.rs  pg_class.rs  pg_database.rs  pg_get_expr_udf.rs  pg_namespace.rs  pg_replication_slot.rs  pg_roles.rs  pg_settings.rs  pg_stat_gssapi.rs  pg_tables.rs  pg_views.rs
datafusion-postgres/src/sql/: blacklist.rs  parser.rs  rules.rs
datafusion-postgres/tests/: dbeaver.rs  metabase.rs  pgcli.rs  psql.rs  revealbi.rs  revealbi_minimal_repro.rs
datafusion-postgres/tests/common/: mod.rs
pg_catalog_arrow_exports/: pg_aggregate.feather  pg_amproc.feather  pg_attrdef.feather  pg_auth_members.feather  pg_class.feather  pg_constraint.feather  pg_conversion.feather  pg_database.feather  pg_db_role_setting.feather  pg_description.feather  pg_enum.feather  pg_event_trigger.feather  pg_foreign_data_wrapper.feather  pg_foreign_server.feather  pg_foreign_table.feather  pg_index.feather  pg_inherits.feather  pg_init_privs.feather  pg_language.feather  pg_largeobject.feather  pg_namespace.feather  pg_opclass.feather  pg_parameter_acl.feather  pg_partitioned_table.feather  pg_policy.feather  pg_proc.feather  pg_publication_rel.feather  pg_range.feather  pg_seclabel.feather  pg_shdescription.feather  pg_shseclabel.feather  pg_statistic_ext_data.feather  pg_subscription.feather  pg_subscription_rel.feather  pg_transform.feather  pg_trigger.feather  pg_ts_config.feather  pg_ts_dict.feather  pg_ts_parser.feather  pg_ts_template.feather  (+1 more)
tests-integration/: README.md  test.sh  test_csv.py  test_parquet.py  test_rbac.py  test_ssl.py  test_transactions.py
tests-integration/ssl/: server.crt  server.key
