[package]
name = "arrow-pg"
description = "Arrow data mapping and encoding/decoding for Postgres"
version = "0.5.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "../README.md"
rust-version.workspace = true

[features]
default = ["arrow"]
arrow = ["dep:arrow"]
datafusion = ["dep:datafusion"]

[dependencies]
arrow = { workspace = true, optional = true }
bytes.workspace = true
chrono.workspace = true
datafusion = { workspace = true, optional = true }
futures.workspace = true
pgwire = { version = ">=0.32", default-features = false, features = ["server-api"] }
postgres-types.workspace = true
rust_decimal.workspace = true
