[package]
name = "arrow-pg"
description = "Arrow data mapping and encoding/decoding for Postgres"
version = "0.8.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "../README.md"
rust-version.workspace = true

[features]
default = ["arrow"]
arrow = ["dep:arrow"]
datafusion = ["dep:datafusion"]
# for testing
_duckdb = []
_bundled = ["duckdb/bundled"]


[dependencies]
arrow = { workspace = true, optional = true }
bytes.workspace = true
chrono.workspace = true
datafusion = { workspace = true, optional = true }
futures.workspace = true
pgwire = { workspace = true, default-features = false, features = ["server-api", "pg-ext-types"] }
postgres-types.workspace = true
rust_decimal.workspace = true

[dev-dependencies]
async-trait = "0.1"
duckdb = { version = "~1.4" }
tokio = { version = "1.48", features = ["full"]}

[[example]]
name = "duckdb"
required-features = ["_duckdb"]
