[package]
name = "datafusion-postgres"
description = "Exporting datafusion query engine with postgres wire protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "../README.md"
rust-version.workspace = true

[dependencies]
arrow-pg = { path = "../arrow-pg", version = "0.3.0", default-features = false, features = ["datafusion"] }
bytes.workspace = true
async-trait = "0.1"
chrono.workspace = true
datafusion.workspace = true
futures.workspace = true
getset = "0.1"
log = "0.4"
pgwire = { workspace = true, features = ["server-api-ring", "scram"] }
postgres-types.workspace = true
rust_decimal.workspace = true
tokio = { version = "1.47", features = ["sync", "net"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "2.0"
rustls-pki-types = "1.0"
